--- a/week02/box-model.html
+++ b/week02/box-model.html
@@ -4,7 +4,7 @@
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width,initial-scale=1.0">
             <title>Bruno Alves | box model </title>
-            <link rel="boxstylesheet"  href="styles/box-model.css">
+            <link rel="stylesheet"  href="styles/box-model.css">
         </head>
         <body>
             <main>
