--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -3,14 +3,16 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>Rafting Site</title>
+        <title>Rafting Site Plan</title>
         <meta name="description" content="This is a rafting website plan. It talks about white water rafting and provides access to our services">
         <meta name="author" content="Bruno dos Santos Alves">
         <link rel="stylesheet" href="styles/site-plan-rafting.css">
     </head>
     <body>
-        <h1>Bruno's Rafting</h1>
-        <div>Bruno dos Santos Alves</div>
+        <header>
+            <h1>Bruno's Rafting</h1>
+            <div>Bruno dos Santos Alves</div>
+        </header>
         <main>
             <h2>Overview</h2>
 
@@ -38,12 +40,13 @@
             <img src="images/logo.png" alt="Rafting Site Logo">
 
             <h2>Style Guide</h2>
-
+            <p>
             <h3>Color Palette</h3>
-            <div>primary-color = #A5F7F5, celeste</div>
-            <div>secondary-color #A7A2A9 Rose Quartz</div>
-            <div>accent1-color = #575A5E Davy's gray</div>
-            <div>accent2-color = #221674 Midnight blue</div>
+                <div>primary-color = #A5F7F5, celeste</div>
+                <div>secondary-color #A7A2A9 Rose Quartz</div>
+                <div>accent1-color = #575A5E Davy's gray</div>
+                <div>accent2-color = #221674 Midnight blue</div>
+            </p>
            <div>Color palette URL: <a href="//coolors.co/palette/08090a-a7a2a9-a5f7f5-575a5e-221674" target="_blank">//coolors.co/palette/08090a-a7a2a9-a5f7f5-575a5e-221674</a></div>
             <h3>Typography</h3>
             <h4>Headings Example Font: Rock Salt</h4>
