--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -27,7 +27,7 @@
                 actually going to deliver the service in full.
 
                 .What do they expect to find or what questions will be answered by them accessing the website? They Want to know about location,
-                prices and what it is going to take them to do the rafting. They also probably want to talk to a human responsible for the services,
+                prices and what it is going to take them to do the rafting. They will also probably want to talk to a human responsible for the services,
                 who will be able to answer their questions.
 
             
