--- a/index.html
+++ b/index.html
@@ -15,16 +15,29 @@
                     <a href="#">Home</a>
                     <a href="wwr/">Rafting Website</a>
                     <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+                    <a href="https://www.linkedin.com/in/bruno-dos-santos-alves-6a74a91a5?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Bruno dos Santos Alves | Linkedin</a>
+                    <a href="https://facebook.com">Facebook</a>
                 </nav>
             </header>
             <main>
                 <h1> Bruno dos Santos Alves | WDD 130</h1>
                 <img src="images/profile.JPEG.jpeg" alt="Bruno dos Santos Alves" width="200">
                 <p>I am studying software developement, was born in Minas Gerais, Brazil and raise in Rio de Janeiro. I love spending
-                time with my family and to play soccer and volleyball. I have also got a twin brother.
+                time with my family and to play soccer and volleyball. I have also got a twin brother. 
+                I grew up in a city on the hills of Rio de Janeiro, called Petrópolis. It is a very calm city with cool weather, sometimes it gets cold,
+                in the past, we have had tempetures below 0 degrees celsius. I still live here and I intend to stay here for some time, probably until I
+                marry. I served as a full time missionary in Ghana, a west african country. That was an awesome experience, the savior has taught me 
+                so much on my mission and he has helped me change. I am very grateful and I really cherish that experience.
+                One day, I want to go back and visit Ghana, and also other african countries and maybe meet some of the people I have been with 
+                over there
                 </p>
+                <ul class="box">
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/accra-ghana-temple?lang=eng" target="_blank"> Accra Ghana Temple</a>
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/manaus-brazil-temple?lang=eng" target="_blank"> Manaus Brazil Temple</a>
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/rio-de-janeiro-brazil-temple?lang=eng" target="_blank"> Rio de Janeiro Brazil Temple</a>
+                </ul>
             </main>
-            <aside>
+            <aside class="box">
                 <h2>Brazil</h2>
                 <img src="https://th.bing.com/th?id=OIP.DxJj9Ba26ZpnHqyGo2fZVwHaEo&w=316&h=197&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2" alt="Brazilian Flag">
                 <p>Brazil is a huge country in south america, which has a lot of jungle and water. Brazilian people are very receptive and love soccer</p>
@@ -33,4 +46,5 @@
                 <p>©2024 (●'◡'●) Bruno dos Santos Alves, Brazil</p>
             </footer>
         </body>
+        <!-- last modified in May 8th-->
     </html>
