--- a/wwr/about.html
+++ b/wwr/about.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <img src="images/logo.png" alt="Logo, a paddle." width="200px">
+            <img src="images/logo.png" alt="Logo, a paddle." width="200">
             <nav>
                 <a href="index.html">index.html</a>
                 <a href="about.html">about.html</a>
@@ -24,7 +24,7 @@
                 <img src="images/rafting-background.avif" alt="raftinf background" id="background">
                 <h1>Bruno's rafting</h1>
                 <article>
-                    <img src="images/happy-employee-dois.jpeg" alt="Happy employees" width="200px">
+                    <img src="images/happy-employee-dois.jpeg" alt="Happy employees" width="200">
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis minus autem maiores ipsa laboriosam labore incidunt optio explicabo illo enim!
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, tempora!
                     </p>
