--- a/wwr/about.html
+++ b/wwr/about.html
@@ -26,8 +26,7 @@
                 <article>
                     <img src="images/happy-employee-dois.jpeg" alt="Happy employees" width="200">
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis minus autem maiores ipsa laboriosam labore incidunt optio explicabo illo enim!
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, tempora!
-                    </p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, tempora!</p>
                 </article>
             </div>
                 <section>
