--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>About us Website</title>
+        <title>About us Bruno's rafting Website</title>
         <meta name="description" content="This will provide contact information, history and other promotions">
         <meta name="author" content="Bruno dos Santo Alves">
         <link rel="stylesheet" href="styles/rafting.css">
@@ -50,7 +50,7 @@
                         <figure><img src="images/rep-rafting-2.avif" alt="rafting image 2"><figcaption> Rafting with the governor</figcaption></figure>
                         <figure><img src="images/rep-rafting-3.jpg" alt="rafting image 3"><figcaption> Two new boats</figcaption></figure>               
                         <figure><img src="images/rep-rafting-4.jpg" alt="rafting image 4"><figcaption> The founder's family rafting</figcaption></figure>              
-                         <figure><img src="images/rep-rafting-5.jpg" alt="rafting image 5"><figcaption> 10 year's mark</figcaption></figure>          
+                        <figure><img src="images/rep-rafting-5.jpg" alt="rafting image 5"><figcaption> 10 year's mark</figcaption></figure>          
                     </div>         
                 </section>            
         </main>
