--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,10 +13,10 @@
             <img src="images/logo.png" alt="Logo, a paddle." width="200">
             <nav >
                 <ul class="navigation">
-                    <li><a href="index.html">index.html</a></li>
-                    <li><a href="about.html">about.html</a></li>
-                    <li><a href="trips.html">trips.html</a></li>
-                    <li><a href="contact.html">contact.html</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="trips.html">Trips</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
