--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -24,8 +24,9 @@
         <main>
             <!-- div style="background-image: url('images/rafting-background.avif');" class="hero"> -->
             <div class="form">
-                <h2>Information Form</h2>
+                <h1>Information Page</h1>
                 <form  class=" formmsm">
+                    <h2>Contact Form</h2>
                     <fieldset class="personalinfo">
                         <legend>Personal Information</legend>
                    
