--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -101,7 +101,8 @@
         </main>
       
         <footer>
-            <p>©2024  Bruno's rafting  Bruno dos Santos Alves</p>
+            <p>©2024  Bruno's rafting  Bruno dos Santos Alves<br> <a href="https://app.moqups.com/2ZBCWZyF7XG2aLCww5v3r7D9qU4AUzTI/view/page/ad64222d5"> Link to the Contact Wireframe</a></p>
+            
            <div class ="icons">
             <a href="https://www.facebook.com/"><img src="images/facebook-anchor.webp" alt="facebook anchor"></a>
             <a href="https://www.instagram.com/"><img src="images/instagram-anchor.webp" alt="instagram anchor"></a>
