--- a/wwr/about.html
+++ b/wwr/about.html
@@ -28,8 +28,9 @@
                 <h1>Bruno's rafting</h1>
                 <article>
                     <img src="images/happy-employee-dois.jpeg" alt="Happy employees" width="200">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis minus autem maiores ipsa laboriosam labore incidunt optio explicabo illo enim!
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, tempora!</p>
+                    <p>We are a company that have offered high quality and safe rafting for over 10 years. We are known
+                        for having highly trained instructors and the best boats. Come have fun with us!
+                    </p>
                 </article>
             </div>
                 <section class = "history">
